--- a/web/package.json
+++ b/web/package.json
@@ -43,5 +43,10 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.0.0"
+	},
+	"dependencies": {
+		"graphology": "^0.26.0",
+		"graphology-layout": "^0.6.1",
+		"sigma": "^3.0.2"
 	}
 }
